  * Fixed a bug with image view and the load event
  * Fixed a bug with M.WebView and Android+Cordova (render pseudo div and push iframe dynamically)
  * Set the current list item value to the view value. This enables for example to get the value/contentBinding of a list item in a template view.
  * Fixed an issue with the debugMode flag and M.Logger (thx to wherati)

** Version 1.2 - Date 02.07.2012 **

  * Fixed a bug with callbacks property in the date picker view
  * Added M.CarouselView as ui widget for vertically or horizontally slidable content
  * Added check for input attributes to mondernizr property of M.Environment
  * Fixed content binding in list view to enable a path as possible property
  * Fixed TabBar issue with currentPage property on tab bar item switch (thx to kevwilde)
  * ListItemView now has array index set for modelId property if nothing else is set
  * Added support for more structured and sorted items for a divided list view
  * Added support for more than one valuePattern within a list item sub component (thx to kevwilde)
  * Added setLabel function to M.TextFieldView
  * Updated ListView to work properly with jQuery Mobiles changes (select/selectmenu)
  * entryPage property whitespaces are now removed before retrieving the entryPage for more robustness
  * Removed binding touchmove for dialogs to fix scrolling issues with lists that listen to tap events
  * Adjusted selector for fixing only fixed toolbars
  * Added getParentPage function to the view

** Version 1.1 - Date 20.04.2012 **

  * Fixed Issue #30: Changed button() to buttonMarkup() to render dynamically added buttons correctly
  * Fixed isAsync and isJSON flags in M.Request
  * Fixed tap/click issue with google maps on iOS
  * Fixed a bug with event dispatching and hyperlinks for buttons/labels
  * Fixed themeUpdate() of M.SelectionListView and with single selection dialog mode (no more js errors with empty content binding)